version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Table/ImportHelpers.rst.txt
.. vale off



:class:`ImportHelpers`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Table.ImportHelpers

   Bases: :py:obj:`object`




.. py:currentmodule:: ImportHelpers

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~TryParseColumnWidths`
            - TryParseColumnWidths method.













Method detail
-------------
.. py:method:: TryParseColumnWidths(columnsWidthsAsString: str, columnWidthCollection: Ansys.Mechanical.Table.ImportHelpers.ColumnWidthSpecification) -> Ansys.Mechanical.Table.ImportHelpers.ColumnWidthsParseResult
   :classmethod:


   
   TryParseColumnWidths method.

   ..
       !! processed by numpydoc !!



.. vale on