version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Table/ImportHelpers.rst.txt
.. vale off



:class:`ImportHelpers`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Table.ImportHelpers

   Bases: :py:obj:`object`




.. py:currentmodule:: ImportHelpers

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~TryParseColumnWidths`
            - TryParseColumnWidths method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: TryParseColumnWidths(columnsWidthsAsString: str, columnWidthCollection: Ansys.Mechanical.Table.ImportHelpers.ColumnWidthSpecification) -> Ansys.Mechanical.Table.ImportHelpers.ColumnWidthsParseResult
   :classmethod:


   
   TryParseColumnWidths method.

   ..
       !! processed by numpydoc !!



.. vale on